update ccs directory

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,8 @@
   #intro{
     background-image: url(../assets/backgrounds/h_img.jpg);
     height: 100vh;
+    background-position: center;
+    background-size: cover;
 }
 
 
@@ -21,3 +23,9 @@
 .mt-6 {
     margin-top: 8rem; 
 }
+
+.mt-50 {
+    top: 25%;
+    left: 30%
+}
+
