--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,4 @@
 
-@media only screen and (min-width: 992px) {
-    #intro {
-      margin-top: -58.59px;
-    }
-  }
 
 
   #intro{
@@ -17,6 +12,7 @@
 #services{
     background-image: url(../assets/backgrounds/s_image.jpg);
     background-size: cover;
+    background-position: center;
     height: 50vh;
 }
 
@@ -32,4 +28,87 @@
 .mt-mouse-click{
     top: 88%;
     left: 50%;
+}
+
+.initially-hidden-1 {
+    display: none;
+}
+
+.initially-hidden-2 {
+    display: none;
+}
+
+.initially-hidden-3 {
+    display: none;
+}
+
+.portfolio-row {
+    width: 80%;
+    margin-left: 10%;
+}
+.portfolio-row img{
+    width: 100%;
+    
+}
+
+
+
+.col-md-3 img:hover{
+    
+    filter: brightness(20%);
+
+}
+
+.hidden1, .hidden2, .hidden3, .hidden4, .hidden5, .hidden6, .hidden7, .hidden8, .border-style>p {
+    top: 10%;
+    left: 10%;
+    transform: translate(0%, 0%);
+    color: white;
+    display: none;
+    
+    
+}
+
+.border-style{
+    border: 4px solid white;
+    width: 85%;
+    height: 85%;
+    text-align: center;
+
+}
+
+.contacts {
+    background-image: url(../assets/backgrounds/c_image.jpg);
+    background-size: cover;
+    background-position: center;
+    height: 68vh;
+}
+
+
+
+.contact-shift {
+    margin-left: 20%;
+}
+
+.w-65 {
+    width: 65%;
+}
+
+.pb-7 {
+    padding-bottom: 16rem;
+}
+
+::placeholder{
+    color: white !important;
+   
+}
+
+button{
+    margin: auto !important;
+    border: none !important;
+}
+
+.ms-10 {
+    margin-left: 40%;
+    
 }
